[package]
name = "city"
version = "0.1.0"
authors = ["mfgm2"]
edition = "2018"

[dependencies]
fastrand = "1.4.0"
arrayvec = "0.5.1"
bounded-vec-deque = "0.1.1"

[dependencies.ctrlc]
version = "3.1.7"
features = ["termination"]

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["std", "derive"]
